LAParser.py
# Generated from LA.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAParser ( Parser ):

    grammarFileName = "LA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fim_algoritmo'", "'algoritmo'", "'declare'", 
                     "'funcao'", "'fim_funcao'", "'constante'", "'verdadeiro'", 
                     "'falso'", "'procedimento'", "'fim_procedimento'", 
                     "'var'", "'tipo'", "'literal'", "'inteiro'", "'real'", 
                     "'logico'", "'registro'", "'fim_registro'", "';'", 
                     "'retorne'", "'faca'", "'ate'", "'enquanto'", "'fim_enquanto'", 
                     "'para'", "'fim_para'", "'caso'", "'seja'", "'senao'", 
                     "'fim_caso'", "'se'", "'entao'", "'fim_se'", "'leia'", 
                     "'escreva'", "'subLiteral'", "'pot'", "'e'", "'ou'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'nao'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\"'", "'('", 
                     "')'", "','", "':'", "'<-'", "'='", "<INVALID>", "<INVALID>", 
                     "'.'", "'&'", "<INVALID>", "'^'", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PALAVRA_CHAVE", "NUM_INT", 
                      "NUM_REAL", "CADEIA_NAO_FECHADA", "CADEIA", "COMENTARIO", 
                      "COMENTARIO_NAO_FECHADO", "WS", "ASPAS", "ABREPAR", 
                      "FECHAPAR", "VIRG", "DOIS_PONTOS", "ATRIBUICAO", "IGUAL", 
                      "OP_RELACIONAL", "OP_ARITMETICO", "PONTO", "E_COMERCIAL", 
                      "COLCHETES", "CIRCUNFLEXO", "PONTOS", "IDENT", "CARACTERE_INVALIDO", 
                      "ERRO" ]

    RULE_programa = 0
    RULE_declaracoes_preliminares = 1
    RULE_bloco_algoritmo = 2
    RULE_corpo_algoritmo = 3
    RULE_declaracao = 4
    RULE_declaracao_funcao = 5
    RULE_declaracao_constante = 6
    RULE_valor_constante = 7
    RULE_declaracao_procedimento = 8
    RULE_parametros = 9
    RULE_parametro = 10
    RULE_declaracoes_locais = 11
    RULE_declaracao_tipo = 12
    RULE_lista_variaveis = 13
    RULE_variavel = 14
    RULE_tipo = 15
    RULE_tipo_identificado = 16
    RULE_tipo_base = 17
    RULE_tipo_registro = 18
    RULE_lista_campos = 19
    RULE_campo = 20
    RULE_acesso_campo = 21
    RULE_comando = 22
    RULE_retorne = 23
    RULE_chamada_procedimento = 24
    RULE_comandofaca = 25
    RULE_comandoenquanto = 26
    RULE_comandopara = 27
    RULE_comandocaso = 28
    RULE_selecao = 29
    RULE_constantes = 30
    RULE_constante = 31
    RULE_comandose = 32
    RULE_comandos = 33
    RULE_leitura = 34
    RULE_lista_identificadores = 35
    RULE_atribuicao = 36
    RULE_escrita = 37
    RULE_subliteral = 38
    RULE_potencia = 39
    RULE_expressao = 40
    RULE_expressao_logica = 41
    RULE_expressao_relacional = 42
    RULE_expressao_aritmetica = 43
    RULE_termo = 44
    RULE_fator = 45
    RULE_chamada_funcao = 46
    RULE_lista_expressao = 47

    ruleNames =  [ "programa", "declaracoes_preliminares", "bloco_algoritmo", 
                   "corpo_algoritmo", "declaracao", "declaracao_funcao", 
                   "declaracao_constante", "valor_constante", "declaracao_procedimento", 
                   "parametros", "parametro", "declaracoes_locais", "declaracao_tipo", 
                   "lista_variaveis", "variavel", "tipo", "tipo_identificado", 
                   "tipo_base", "tipo_registro", "lista_campos", "campo", 
                   "acesso_campo", "comando", "retorne", "chamada_procedimento", 
                   "comandofaca", "comandoenquanto", "comandopara", "comandocaso", 
                   "selecao", "constantes", "constante", "comandose", "comandos", 
                   "leitura", "lista_identificadores", "atribuicao", "escrita", 
                   "subliteral", "potencia", "expressao", "expressao_logica", 
                   "expressao_relacional", "expressao_aritmetica", "termo", 
                   "fator", "chamada_funcao", "lista_expressao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    PALAVRA_CHAVE=46
    NUM_INT=47
    NUM_REAL=48
    CADEIA_NAO_FECHADA=49
    CADEIA=50
    COMENTARIO=51
    COMENTARIO_NAO_FECHADO=52
    WS=53
    ASPAS=54
    ABREPAR=55
    FECHAPAR=56
    VIRG=57
    DOIS_PONTOS=58
    ATRIBUICAO=59
    IGUAL=60
    OP_RELACIONAL=61
    OP_ARITMETICO=62
    PONTO=63
    E_COMERCIAL=64
    COLCHETES=65
    CIRCUNFLEXO=66
    PONTOS=67
    IDENT=68
    CARACTERE_INVALIDO=69
    ERRO=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco_algoritmo(self):
            return self.getTypedRuleContext(LAParser.Bloco_algoritmoContext,0)


        def declaracoes_preliminares(self):
            return self.getTypedRuleContext(LAParser.Declaracoes_preliminaresContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 96
                self.declaracoes_preliminares()


            self.state = 99
            self.bloco_algoritmo()
            self.state = 100
            self.match(LAParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracoes_preliminaresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(LAParser.DeclaracaoContext,i)


        def declaracao_tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_tipoContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_tipoContext,i)


        def declaracao_procedimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_procedimentoContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_procedimentoContext,i)


        def declaracao_funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_funcaoContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_funcaoContext,i)


        def declaracao_constante(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_constanteContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_constanteContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_declaracoes_preliminares

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes_preliminares" ):
                listener.enterDeclaracoes_preliminares(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes_preliminares" ):
                listener.exitDeclaracoes_preliminares(self)




    def declaracoes_preliminares(self):

        localctx = LAParser.Declaracoes_preliminaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes_preliminares)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4696) != 0):
                self.state = 107
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3]:
                    self.state = 102
                    self.declaracao()
                    pass
                elif token in [12]:
                    self.state = 103
                    self.declaracao_tipo()
                    pass
                elif token in [9]:
                    self.state = 104
                    self.declaracao_procedimento()
                    pass
                elif token in [4]:
                    self.state = 105
                    self.declaracao_funcao()
                    pass
                elif token in [6]:
                    self.state = 106
                    self.declaracao_constante()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloco_algoritmoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def corpo_algoritmo(self):
            return self.getTypedRuleContext(LAParser.Corpo_algoritmoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_bloco_algoritmo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco_algoritmo" ):
                listener.enterBloco_algoritmo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco_algoritmo" ):
                listener.exitBloco_algoritmo(self)




    def bloco_algoritmo(self):

        localctx = LAParser.Bloco_algoritmoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloco_algoritmo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(LAParser.T__1)
            self.state = 113
            self.corpo_algoritmo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Corpo_algoritmoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.ComandoContext)
            else:
                return self.getTypedRuleContext(LAParser.ComandoContext,i)


        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(LAParser.DeclaracaoContext,i)


        def declaracao_constante(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_constanteContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_constanteContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_corpo_algoritmo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo_algoritmo" ):
                listener.enterCorpo_algoritmo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo_algoritmo" ):
                listener.exitCorpo_algoritmo(self)




    def corpo_algoritmo(self):

        localctx = LAParser.Corpo_algoritmoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_corpo_algoritmo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 53866397768) != 0) or _la==66 or _la==68:
                self.state = 118
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [20, 21, 23, 25, 27, 31, 34, 35, 66, 68]:
                    self.state = 115
                    self.comando()
                    pass
                elif token in [3]:
                    self.state = 116
                    self.declaracao()
                    pass
                elif token in [6]:
                    self.state = 117
                    self.declaracao_constante()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_variaveis(self):
            return self.getTypedRuleContext(LAParser.Lista_variaveisContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = LAParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LAParser.T__2)
            self.state = 124
            self.lista_variaveis()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_funcaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def ABREPAR(self):
            return self.getToken(LAParser.ABREPAR, 0)

        def FECHAPAR(self):
            return self.getToken(LAParser.FECHAPAR, 0)

        def DOIS_PONTOS(self):
            return self.getToken(LAParser.DOIS_PONTOS, 0)

        def tipo_base(self):
            return self.getTypedRuleContext(LAParser.Tipo_baseContext,0)


        def comandos(self):
            return self.getTypedRuleContext(LAParser.ComandosContext,0)


        def parametros(self):
            return self.getTypedRuleContext(LAParser.ParametrosContext,0)


        def COMENTARIO(self):
            return self.getToken(LAParser.COMENTARIO, 0)

        def declaracoes_locais(self):
            return self.getTypedRuleContext(LAParser.Declaracoes_locaisContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_funcao" ):
                listener.enterDeclaracao_funcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_funcao" ):
                listener.exitDeclaracao_funcao(self)




    def declaracao_funcao(self):

        localctx = LAParser.Declaracao_funcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracao_funcao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LAParser.T__3)
            self.state = 127
            self.match(LAParser.IDENT)
            self.state = 128
            self.match(LAParser.ABREPAR)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or _la==68:
                self.state = 129
                self.parametros()


            self.state = 132
            self.match(LAParser.FECHAPAR)
            self.state = 133
            self.match(LAParser.DOIS_PONTOS)
            self.state = 134
            self.tipo_base()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 135
                self.match(LAParser.COMENTARIO)


            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 138
                self.declaracoes_locais()


            self.state = 141
            self.comandos()
            self.state = 142
            self.match(LAParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def DOIS_PONTOS(self):
            return self.getToken(LAParser.DOIS_PONTOS, 0)

        def tipo_base(self):
            return self.getTypedRuleContext(LAParser.Tipo_baseContext,0)


        def IGUAL(self):
            return self.getToken(LAParser.IGUAL, 0)

        def valor_constante(self):
            return self.getTypedRuleContext(LAParser.Valor_constanteContext,0)


        def COMENTARIO(self):
            return self.getToken(LAParser.COMENTARIO, 0)

        def getRuleIndex(self):
            return LAParser.RULE_declaracao_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_constante" ):
                listener.enterDeclaracao_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_constante" ):
                listener.exitDeclaracao_constante(self)




    def declaracao_constante(self):

        localctx = LAParser.Declaracao_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(LAParser.T__5)
            self.state = 145
            self.match(LAParser.IDENT)
            self.state = 146
            self.match(LAParser.DOIS_PONTOS)
            self.state = 147
            self.tipo_base()
            self.state = 148
            self.match(LAParser.IGUAL)
            self.state = 149
            self.valor_constante()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 150
                self.match(LAParser.COMENTARIO)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valor_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_INT(self):
            return self.getToken(LAParser.NUM_INT, 0)

        def NUM_REAL(self):
            return self.getToken(LAParser.NUM_REAL, 0)

        def CADEIA(self):
            return self.getToken(LAParser.CADEIA, 0)

        def getRuleIndex(self):
            return LAParser.RULE_valor_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor_constante" ):
                listener.enterValor_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor_constante" ):
                listener.exitValor_constante(self)




    def valor_constante(self):

        localctx = LAParser.Valor_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_valor_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1548112371908992) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_procedimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def ABREPAR(self):
            return self.getToken(LAParser.ABREPAR, 0)

        def FECHAPAR(self):
            return self.getToken(LAParser.FECHAPAR, 0)

        def comandos(self):
            return self.getTypedRuleContext(LAParser.ComandosContext,0)


        def parametros(self):
            return self.getTypedRuleContext(LAParser.ParametrosContext,0)


        def COMENTARIO(self):
            return self.getToken(LAParser.COMENTARIO, 0)

        def declaracoes_locais(self):
            return self.getTypedRuleContext(LAParser.Declaracoes_locaisContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_procedimento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_procedimento" ):
                listener.enterDeclaracao_procedimento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_procedimento" ):
                listener.exitDeclaracao_procedimento(self)




    def declaracao_procedimento(self):

        localctx = LAParser.Declaracao_procedimentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaracao_procedimento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LAParser.T__8)
            self.state = 156
            self.match(LAParser.IDENT)
            self.state = 157
            self.match(LAParser.ABREPAR)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or _la==68:
                self.state = 158
                self.parametros()


            self.state = 161
            self.match(LAParser.FECHAPAR)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==51:
                self.state = 162
                self.match(LAParser.COMENTARIO)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 165
                self.declaracoes_locais()


            self.state = 168
            self.comandos()
            self.state = 169
            self.match(LAParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.ParametroContext)
            else:
                return self.getTypedRuleContext(LAParser.ParametroContext,i)


        def VIRG(self, i:int=None):
            if i is None:
                return self.getTokens(LAParser.VIRG)
            else:
                return self.getToken(LAParser.VIRG, i)

        def getRuleIndex(self):
            return LAParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = LAParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.parametro()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==57:
                self.state = 172
                self.match(LAParser.VIRG)
                self.state = 173
                self.parametro()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

